name:              mt-mongodb
version:           0.1.0
license:           AllRightsReserved
copyright:         Copyright (C) 2012 Massive Tactical Limited
category:          Database
synopsis:          Interface for MongoDB
description:       Provides a simple interface for MongoDB
author:            Blake Rain <blake.rain@massivetactical.com>
maintainer:        Blake Rain <blake.rain@massivetactical.com>
cabal-version:     >= 1.10
build-type:        Simple
stability:         Provisional
homepage:          https://github.com/MassiveTactical/mt-mongodb
bug-reports:       https://github.com/MassiveTactical/mt-mongodb/issues

-------------------------------------------------------------------------------

library
  hs-source-dirs:   src
  exposed-modules:  Massive.Database.MongoDB
                    Massive.Database.MongoDB.Config
                    Massive.Database.MongoDB.MongoValue
                    Massive.Database.MongoDB.MongoEntity
                    Massive.Database.MongoDB.Operations
                    Massive.Database.MongoDB.Pool
                    Massive.Database.MongoDB.Types
  ghc-options:      -Wall
  default-language: Haskell2010
  build-depends:    aeson                         >= 0.6        && < 0.7
                  , base                          >= 4          && < 5
                  , base-unicode-symbols          >= 0.2        && < 0.3
                  , base64-bytestring             >= 1.0        && < 1.1
                  , bson                          >= 0.2        && < 0.3
                  , bytestring                    >= 0.10       && < 0.11
                  , containers                    >= 0.5        && < 0.6
                  , data-default                  >= 0.5
                  , monad-control                 >= 0.3        && < 0.4
                  , mongoDB                       >= 1.3        && < 1.4
                  , mt-shared
                  , mtl                           >= 2.1        && < 2.2
                  , time                          >= 1.4        && < 1.5
                  , template-haskell
                  , text                          >= 0.11       && < 0.12
                  , transformers                  >= 0.3        && < 0.4
                  , unordered-containers          >= 0.2        && < 0.3
